<resources>
    <string name="app_name">Moodle</string>
    <string name="daily_mood_question">How are you feeling today?</string>
    <string name="mood_label_very_happy">Terrific</string>
    <string name="mood_label_happy">Happy</string>
    <string name="mood_label_neutral">Neutral</string>
    <string name="mood_label_sad">Sad</string>
    <string name="mood_label_very_sad">Terrible</string>
    <string name="skip">Skip</string>
    <string name="daily_activities_question">What have you been up to?</string>
    <string name="mood_selected">Selected Mood</string>
    <string name="activity_label_travel">Travel</string>
    <string name="activity_label_work">Work</string>
    <string name="activity_label_family">Family</string>
    <string name="activity_label_friends">Friends</string>
    <string name="activity_label_date">Date</string>
    <string name="activity_label_sport">Sport</string>
    <string name="activity_label_party">Party</string>
    <string name="activity_label_tv">TV</string>
    <string name="activity_label_reading">Reading</string>
    <string name="activity_label_gaming">Gaming</string>
    <string name="activity_label_shopping">Shopping</string>
    <string name="activity_label_meal">Meal</string>
    <string name="activity_label_cooking">Cooking</string>
    <string name="activity_label_cleaning">Cleaning</string>
    <string name="activity_label_studying">Studying</string>
    <string name="activity_label_relax">Relax</string>
    <string name="activity_label_gym">Gym</string>
    <string name="activity_label_sick">Sick</string>
    <string name="activity_label_other">Other</string>
    <string name="save">Save</string>
    <string name="daily_activities_comments_question">How did you find these activities?</string>
    <string name="daily_activities_comments_hint">Write Comment</string>
    <string name="selected_activities">Activities:</string>
    <string name="next">Next</string>
    <string name="title_activity_visualisations">VisualisationsActivity</string>
    <string name="title_calendar">Calendar</string>
    <string name="title_stats">Stats</string>
    <string name="title_achievements">Achievements</string>
    <string name="stats_line_chart_heading">Mood Chart</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
</resources>
